@@ -10,6 +10,7 @@
 25-Oct-2018  - V0.16 Update testing environment and dependencies
 26-Oct-2018  - V0.17 Add additonal JSON encodings for YAML mapping data types
 25-Nov-2018  - V0.18 Add support for FASTA format
+ 1-Dec-2018  - V0.19 Add support for CSV and related delimited row formats
 #
 
 
